# RUCE

./: .gitignore  .gitmodules  CMakeLists.txt  FileCopy.cmake  Makefile  README.md  THIRD_PARTY  Version.cmake
cli/: Common.h  GetPara.c  GetPara.h  RUCE_CLI.c  Synth.c  Synth.h  WineUtil.c  WineUtil.h  main.c
data/: testpm.json  testroto.json
data/zhizi/: LICENSE  oto.ini
demo/: resampler.c
doc/: coding-style.txt
lib/SPTK-3.8-extracted/: AUTHORS  CMakeLists.txt  COPYING  README
lib/SPTK-3.8-extracted/lib/: getmem.c  getmem.priv.h  getmem.pub.h
lib/libWinTF8/: CMakeLists.txt
lib/libWinTF8/src/: argv.cpp  argv.h  env.cpp  env.h  initcon.h  localconv.h  localconv_local_u8.cpp  localconv_u8_dos.cpp  localconv_u8_local.cpp  printf.cpp  spawn.cpp  spawn.h  streamio.h  u8str.h  utfconv.h  utfconv_u8_u8.cpp  utfconv_u8_wide.cpp  utfconv_wide_u8.cpp  utils.h
lib/libb64-1.2.1/: CMakeLists.txt
lib/libsndfile-1.0.25/: CMakeLists.txt  NEWS
lib/libsndfile-1.0.25/cmake/: clip_mode_negative.c  clip_mode_positive.c
lib/libsndfile-1.0.25/src/: CMakeLists.txt  audio_detect.c  common.c  config.h.in  create_symbols_file.py  file_io.c  ogg.c  ogg_pcm.c  ogg_speex.c  ogg_vorbis.c  sfconfig.h  sndfile.h  sndfile.h.in
lib/ooura-fft/: CMakeLists.txt  README  fftsg.c  fftsg.priv.h  fftsg.pub.h
lib/world/: CMakeLists.txt  matlabfunctions.c  matlabfunctions.h
lib/world/doc/: acknowledgment.txt  changes_JP.txt  dev_env.txt  readme_ENG.txt  readme_JP.txt  usageForExpert_JP.txt
src/: .GetPara.c.kate-swp  CMakeLists.txt  Common.h  Concat.c  Concat.h  Config.h.in  EndPoint.c  GetPara.c  GetPara.h  HNMSynth.c  IO.c  IO.h  PSOLA.c  Pitchbend.c  Pitchbend.h  RUCE.h  RUCEData.c  RUCEData.h  RUDB.c  RUDB.h  RUDB.txt  Roto.c  Roto.h  STFT.h  SessionConfig.h  Soundbank.c  Soundbank.h  SpecManip.c  SpecManip.h  Synth.c  Synth.h  Timing.c  Timing.h  UnitParam.c  UnvoicedSynth.c  Verbose.h  _F0.h  _F0.rc  _SNT.rc  _VOT.rc  (+37 more)
src/Include/: CVESVP.h
src/Iterator/: _HNMItersizer.h  _PSOLAIterlyzer.rc  _PSOLAItersizer.rc  _STFTIterlyzer.rc  _STFTItersizer.rc  _SinuGenericIterlyzer.h
src/Misc/: Base64.c  Tune.c
src/Spectral/: _Pitch.rc
src/Structure/: Array.txt  HNMFrame.c  HNMFrame.h  _HNMContour.h  _HNMFrame.h
test/: CMakeLists.txt
test/TestOO/: _MyPrint.h
test/TestRUDB/: main.c
test/TestRUDB/TestData/: a.rudb  roto.json
tests/: CMakeLists.txt  signal-segment.cpp
tools/: git-update-all-submodules
