cmake_minimum_required(VERSION 3.0)
project(libsndfile)

INCLUDE(CheckIncludeFiles) 
INCLUDE(TestBigEndian)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckSymbolExists)
INCLUDE(CheckCSourceRuns)
INCLUDE(CheckTypeSize)

test_big_endian(CMAKE_BIG_ENDIAN)
if(CMAKE_BIG_ENDIAN)
set(CMAKE_BIG_ENDIAN 1)
else()
set(CMAKE_BIG_ENDIAN 0)
endif()
check_include_files(alsa/asoundlib.h HAVE_ALSA_ASOUNDLIB_H)
check_include_files(byteswap.h HAVE_BYTESWAP_H)
check_function_exists(calloc HAVE_CALLOC)
check_symbol_exists(S_IRGRP "unistd.h" HAVE_DECL_S_IRGRP)
check_include_files(dlfcn.h HAVE_DLFCN_H)
check_include_files(endian.h HAVE_ENDIAN_H)
check_function_exists(free HAVE_FREE)
check_function_exists(fstat HAVE_FSTAT)
check_function_exists(fsync HAVE_FSYNC)
check_function_exists(ftruncate HAVE_FTRUNCATE)
check_function_exists(getpagesize HAVE_GETPAGESIZE)
check_function_exists(gettimeofday HAVE_GETTIMEOFDAY)
check_function_exists(gmtime HAVE_GMTIME)
check_function_exists(gmtime_r HAVE_GMTIME_R)
check_function_exists(localtime HAVE_LOCALTIME)
check_function_exists(localtime_r HAVE_LOCALTIME_R)
check_function_exists(lrint HAVE_LRINT)
check_function_exists(lrintf HAVE_LRINTF)
check_function_exists(lseek HAVE_LSEEK)
check_function_exists(malloc HAVE_MALLOC)
check_function_exists(mmap HAVE_MMAP)
check_function_exists(open HAVE_OPEN)
check_function_exists(pipe HAVE_PIPE)
check_function_exists(pread HAVE_PREAD)
check_function_exists(pwrite HAVE_PWRITE)
check_function_exists(read HAVE_READ)
check_function_exists(realloc HAVE_REALLOC)
check_function_exists(setlocale HAVE_SETLOCALE)
check_function_exists(snprintf HAVE_SNPRINTF)
check_include_files(locale.h HAVE_LOCALE_H)
check_include_files(memory.h HAVE_MEMORY_H)
check_include_files(sndio.h HAVE_SNDIO_H)
check_include_files(stdint.h HAVE_STDINT_H)
check_include_files(stdlib.h HAVE_STDLIB_H)
check_include_files(strings.h HAVE_STRINGS_H)
check_include_files(string.h HAVE_STRING_H)
check_include_files(sys/stat.h HAVE_SYS_STAT_H)
check_include_files(sys/time.h HAVE_SYS_TIME_H)
check_include_files(sys/types.h HAVE_SYS_TYPES_H)
check_include_files(unistd.h HAVE_UNISTD_H)
check_function_exists(vsnprintf HAVE_VSNPRINTF)
check_function_exists(waitpid HAVE_WAITPID)
check_function_exists(write HAVE_WRITE)
check_include_files(sys/wait.h HAVE_SYS_WAIT_H)
if(WIN32)
set(OS_IS_WIN32 1)
set(USE_WINDOWS_API 1)
endif()
if(APPLE)
set(OS_IS_MACOSX 1)
endif()
check_type_size(double SIZEOF_DOUBLE)
check_type_size(float SIZEOF_FLOAT)
check_type_size(int SIZEOF_INT)
check_type_size(int64_t SIZEOF_INT64_T)
check_type_size(loff_t SIZEOF_LOFF_T)
check_type_size(long SIZEOF_LONG)
check_type_size(off64_t SIZEOF_OFF64_T)
check_type_size(off_t SIZEOF_OFF_T)
check_type_size(short SIZEOF_SHORT)
check_type_size(size_t SIZEOF_SIZE_T)
check_type_size(ssize_t SIZEOF_SSIZE_T)
check_type_size(void* SIZEOF_VOIDP)
check_type_size(wchar_t SIZEOF_WCHAR_T)
check_type_size("long long" SIZEOF_LONG_LONG)
check_c_source_runs(cmake/clip_mode_positive.c CPU_CLIPS_POSITIVE)
check_c_source_runs(cmake/clip_mode_negative.c CPU_CLIPS_NEGATIVE)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/src/config.h)

add_subdirectory(src)
